# rheology_emulator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
code/: main.py  test.py  test_eval.py
code/processing/: intermediate_data_processing.py  make_pairs.py  make_pairs_2.py
code/src/: evaluate.py  inference.py  invertable_column_transformer.py  loss.py  models.py  scaling.py  test_nn.py  torch_data_manager.py  train_nn.py  utils.py
code/src/data_managers/: fmt1.py  fmt2.py
configs/nn_architecture/: it_4L.yaml  it_5L.yaml  it_5L_gelu.yaml  it_5L_gelu_batchnorm.yaml  resnet.yaml  transformer.yaml
configs/parameters/: nn_50e.yaml  nn_shrinkage.yaml  nn_test.yaml
configs/training/80N/: 0.yaml  1.yaml
configs/training/80N_DJF/: 0.yaml
configs/training/80N_Jan/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
configs/training/antarctic-tests/all/: all.yaml
configs/training/arctic-tests/80deg/: 1.yaml  10.yaml  11.yaml  12.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  80deg.yaml  9.yaml
configs/training/arctic-tests/all/: 1.yaml  10.yaml  11.yaml  12.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml  (+1 more)
configs/training/charlie/: mlp-100itr-sivelv.yaml  mlp-100itr.yaml  mlp-15itr-sivelv.yaml  mlp-15itr.yaml  mlp-large-dataset.yaml  mlp-medium-dataset.yaml
environment/: environment-MO.yaml  environment.yaml
notes/: data_subsetting.ipynb  inference.ipynb  preprocessing.ipynb  training_data-80N.ipynb  training_data-80N_DJF.ipynb  training_data-80N_Jan.ipynb  training_data.ipynb
(+17 files in other folders)
